--- a/DarwinClientTest/DarwinClientTest.csproj
+++ b/DarwinClientTest/DarwinClientTest.csproj
@@ -10,9 +10,25 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
+        <PackageReference Include="NSubstitute" Version="4.2.1" />
+        <PackageReference Include="Serilog" Version="2.9.0" />
         <PackageReference Include="xunit" Version="2.4.0" />
         <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
         <PackageReference Include="coverlet.collector" Version="1.2.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Remove="Data\20200415020643_ref_v3.xml.gz" />
+      <None Update="Data\20200417020641_ref_v3.xml.gz">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="Data\20200417020641_v8.xml.gz">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\DarwinClient\DarwinClient.csproj" />
     </ItemGroup>
 
 </Project>
