--- a/DarwinClient/DarwinClient.csproj
+++ b/DarwinClient/DarwinClient.csproj
@@ -5,6 +5,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="AWSSDK.S3" Version="3.3.110.61" />
       <PackageReference Include="Serilog" Version="2.9.0" />
     </ItemGroup>
 
