--- a/DarwinClientTest/DarwinClientTest.csproj
+++ b/DarwinClientTest/DarwinClientTest.csproj
@@ -9,6 +9,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Apache.NMS.ActiveMQ.NetStd" Version="1.7.3" />
         <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.3.101" />
         <PackageReference Include="AWSSDK.S3" Version="3.3.110.61" />
         <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.4" />
@@ -19,6 +20,7 @@
         <PackageReference Include="Serilog" Version="2.9.0" />
         <PackageReference Include="Serilog.Sinks.XUnit" Version="2.0.4" />
         <PackageReference Include="xunit" Version="2.4.1" />
+        <PackageReference Include="xunit.categories" Version="2.0.4" />
         <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
         <PackageReference Include="coverlet.collector" Version="1.2.0" />
     </ItemGroup>
@@ -32,6 +34,9 @@
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
       <None Update="appsettings.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="Data\20200415020643_ref_v2.xml.gz">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
     </ItemGroup>
