--- a/DarwinClient/DarwinClient.csproj
+++ b/DarwinClient/DarwinClient.csproj
@@ -1,7 +1,19 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netcoreapp3.1</TargetFramework>
+        <TargetFramework>netstandard2.0</TargetFramework>
+        <LangVersion>8</LangVersion>
+        <Authors>Phil Sharp</Authors>
+        <Description>UK Rail: NRE Darwin Client.  Has classes to listen to the pushport and download the timetable files</Description>
+        <PackageProjectUrl>https://github.com/Phils0/DarwinClient/</PackageProjectUrl>
+        <PackageLicenseExpression>MIT</PackageLicenseExpression>
+        <RepositoryUrl>https://github.com/Phils0/DarwinClient/</RepositoryUrl>
+        <RepositoryType>git</RepositoryType>
+        <PackageTags>ukrail nre darwin</PackageTags>
+        <PackageVersion>0.0.0</PackageVersion>
+        <Title>UK Rail Darwin Client</Title>
+        <IncludeSymbols>true</IncludeSymbols>
+        <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     </PropertyGroup>
 
     <ItemGroup>
