--- a/DarwinClient/DarwinClient.csproj
+++ b/DarwinClient/DarwinClient.csproj
@@ -2,7 +2,7 @@
 
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
-        <LangVersion>8</LangVersion>
+        <LangVersion>latest</LangVersion>
         <Authors>Phil Sharp</Authors>
         <Description>UK Rail: NRE Darwin Client.  Has classes to listen to the pushport and download the timetable files</Description>
         <PackageProjectUrl>https://github.com/Phils0/DarwinClient/</PackageProjectUrl>
@@ -14,6 +14,7 @@
         <Title>UK Rail Darwin Client</Title>
         <IncludeSymbols>true</IncludeSymbols>
         <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+        <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
