--- a/DarwinClientTest/DarwinClientTest.csproj
+++ b/DarwinClientTest/DarwinClientTest.csproj
@@ -1,11 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netcoreapp3.1</TargetFramework>
+        <TargetFramework>net7.0</TargetFramework>
 
         <IsPackable>false</IsPackable>
 
         <RootNamespace>DarwinClient.Test</RootNamespace>
+
+        <LangVersion>latest</LangVersion>
+
+        <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
