--- a/DarwinClientTest/DarwinClientTest.csproj
+++ b/DarwinClientTest/DarwinClientTest.csproj
@@ -16,23 +16,22 @@
         <PackageReference Include="Apache.NMS.ActiveMQ.NetStd" Version="1.8.0" />
         <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.7.13" />
         <PackageReference Include="AWSSDK.S3" Version="3.7.401" />
-        <PackageReference Include="Microsoft.Extensions.Configuration" Version="10.0.0" />
-        <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="10.0.0" />
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.1" />
-        <PackageReference Include="NSubstitute" Version="5.1.0" />
-        <PackageReference Include="ReflectionMagic" Version="5.0.0" />
-        <PackageReference Include="Serilog" Version="4.1.0" />
-        <PackageReference Include="Serilog.Sinks.XUnit" Version="3.0.5" />
-        <PackageReference Include="xunit" Version="2.9.3" />
-        <PackageReference Include="xunit.categories" Version="2.0.8" />
-        <PackageReference Include="xunit.runner.visualstudio" Version="2.5.13">
+        <PackageReference Include="Microsoft.Extensions.Configuration" Version="10.0.2" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="10.0.2" />
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="18.0.1" />
+        <PackageReference Include="NSubstitute" Version="5.3.0" />
+        <PackageReference Include="ReflectionMagic" Version="5.0.1" />
+        <PackageReference Include="Serilog" Version="4.3.0" />
+        <PackageReference Include="coverlet.collector" Version="6.0.4">
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
-        <PackageReference Include="coverlet.collector" Version="6.0.0">
-          <PrivateAssets>all</PrivateAssets>
+        <PackageReference Include="Serilog.Sinks.XUnit3" Version="1.2.0" />
+        <PackageReference Include="xunit.runner.visualstudio" Version="3.1.5">
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+          <PrivateAssets>all</PrivateAssets>
         </PackageReference>
+        <PackageReference Include="xunit.v3" Version="3.2.2" />
     </ItemGroup>
 
     <ItemGroup>
